# pyEFPE

./: LICENSE  README.md  pyproject.toml  setup.py
Tests/: test_pyEFPE.py
Tests/model_validation/: compare_pyEFPE_versions.py  compare_waveforms.py  plot_amplitude_discontinuity.py  plot_compare_waveforms.py  plot_ecc_scatter.py  plot_pyEFPE_comparison.py  plot_waveform.py  study_epsilonN_pyEFPE.py  utils_compute_mismatches.py
Tests/model_validation/ASDs/: get_asds.sh
Tests/model_validation/legacy/no_MB/: pyEFPE_no_MB.py
Tests/test_PN_tauc/: integrate_tLO.py  integrate_tLO_u.py
Tests/test_amplitudes/: necesary_modes.py  test_N22_implementations.py
Tests/test_phase_evolution/: pyEFPE_PN_derivatives.py  tDomain_integrate_RR_funcs.py  test_Euler_angle_integration.py  test_argG_cancelation.py  test_new_ders.py  test_tDomain_integrate_RR.py
Tests/test_subroutines/: solve_ak_system.py  test_WignerDMatrices.py  test_elliptic_PI.py  test_expix_vs_sincos.py  test_group_sum_idxs.py  test_sorted_vals_in_intervals.py
Tests/test_theory/: Compare_PN_equations.nb  correct_PN_derivatives.py  pyEFPE_simplifications.nb  test_correct_PN_derivatives.py
pyEFPE/: __init__.py
pyEFPE/utils/: __init__.py  compute_mismatches.py  constants.py  cython_utils.pyx  utils.py
pyEFPE/waveform/: EFPE.py  __init__.py  functions.py  plugins.py
